--- a/app/src/main/res/layout/contact_adapter_item.xml
+++ b/app/src/main/res/layout/contact_adapter_item.xml
@@ -5,16 +5,27 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginLeft="10dp">
+        android:layout_marginLeft="15dp"
+        android:weightSum="1.0">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Text"
             android:id="@+id/nameText"
             android:layout_marginTop="10dp"
-            android:layout_gravity="center_horizontal" />
+            android:textColor="#000000"
+            android:textSize="20dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/phoneText"
+            android:layout_marginTop="5dp"
+            android:text="TEXT"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="5dp"
+            />
     </LinearLayout>
 
 </LinearLayout>
