--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -12,7 +12,9 @@
         android:id="@+id/message_list"
         android:layout_weight="0.85"
         android:layout_gravity="center_horizontal"
-        android:layout_height="0dp" />
+        android:layout_height="0dp"
+        android:transcriptMode="alwaysScroll"
+        android:stackFromBottom="true"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
